implemented image carousel for team members with otslide.css and otslider.js

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <!--HEAD-->
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SysteMINT | game </title>
-  <link href="css/styleSM.css" type="text/css" rel="stylesheet" media="all"/>
-  <script type="text/javascript" src="js/main.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SysteMINT | game </title>
+    <link href="css/styleSM.css" type="text/css" rel="stylesheet" media="all"/>
+    <script type="text/javascript" src="js/main.js"></script>
+    <link rel="stylesheet" href="css/otslider.css"/>
+    <script src="js/otslider.js"></script>
 </head>
 
 <!--BODY-->
@@ -15,192 +17,217 @@
 
 <!--logo + navbar-->
 <header>
-  <div class="container">
-    <!--    hamburger-->
-    <div class="menubutton">
-      <span class="top"></span>
-      <span class="middle"></span>
-      <span class="bottom"></span>
+    <div class="container">
+        <!--    hamburger-->
+        <div class="menubutton">
+            <span class="top"></span>
+            <span class="middle"></span>
+            <span class="bottom"></span>
+        </div>
+        <nav id="mainnav">
+            <ul>
+                <li><h1><a href="index.html"><span class="big">Syste</span><span class="bigSalmon">mint</span><span
+                        class="big"> game</span></a></h1></li>
+                <!--leerraum-->
+                <li><p></p></li>
+                <li><p></p></li>
+                <li><p></p></li>
+                <li><a id="home" href="#homelink">Home</a></li>
+                <li><a href="#spiel">Spiel</a></li>
+                <li><a href="#schule">Schule</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a id="contact" href="#kontakt">Kontakt</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav id="mainnav">
-        <ul>
-          <li><h1><a href="index.html"><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big"> game</span></a></h1></li>
-          <!--leerraum-->
-          <li><p></p></li>
-          <li><p></p></li>
-          <li><p></p></li>
-          <li><a id="home" href="#homelink">Home</a></li>
-          <li><a href="#spiel">Spiel</a></li>
-          <li><a href="#schule">Schule</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a id="contact" href="#kontakt">Kontakt</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
 </header>
 
 <!--            INTRO & TITLE       -->
 <div class="title">
-  <div class="container">
-    <h2 id="homelink">Wasserwelten</h2>
-    <h1>Systemint Game</h1>
-  </div>
+    <div class="container">
+        <h2 id="homelink">Wasserwelten</h2>
+        <h1>Systemint Game</h1>
+    </div>
 </div>
 
 <div class="intro">
-  <div class="container">
-    <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
-      täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
-      Jugendliche den gefährlichen Stoffen auf die Spur...</p>
-    <button type="button" class="play-btn">Spielen</button>
-    <button type="button" class="contact-btn">Melde Dich</button>
-  </div>
+    <div class="container">
+        <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
+            täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
+            Jugendliche den gefährlichen Stoffen auf die Spur...</p>
+        <button type="button" class="play-btn">Spielen</button>
+        <button type="button" class="contact-btn">Melde Dich</button>
+    </div>
 </div>
 
 <!--                 #### TITLE 1 - für Lehrpersonen ####          -->
 <div class="container lehrpersonen">
-  <div class="title">
-    <div class="container">
-      <h2 id="schule">Für Wen, Was, Wie?</h2>
-      <h1>Lehrpersonen</h1>
+    <div class="title">
+        <div class="container">
+            <h2 id="schule">Für Wen, Was, Wie?</h2>
+            <h1>Lehrpersonen</h1>
+        </div>
     </div>
-  </div>
 
-  <!--  CONTENT 1 - Zielgruppe  -->
-  <div class="wrapper">
-    <div class="content1">
-      <h3>ZIELGRUPPE</h3>
-      <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
-        Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
-        und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <!--  CONTENT 1 - Zielgruppe  -->
+    <div class="wrapper">
+        <div class="content1">
+            <h3>ZIELGRUPPE</h3>
+            <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
+                Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
+                und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
-  <!--  CONTENT 2- Ziele   -->
-  <div class="wrapper">
-    <div class="content2">
-      <h3>Ziele</h3>
-      <p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen,
-        miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
-        Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
-        fachliche Ziele der Fächer NT und RZG verfolgt.</p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <!--  CONTENT 2- Ziele   -->
+    <div class="wrapper">
+        <div class="content2">
+            <h3>Ziele</h3>
+            <p>Jugendliche müssen im Spiel Fakten über die Spurenstoffen im Gewässer verstehen,
+                miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
+                Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
+                fachliche Ziele der Fächer NT und RZG verfolgt.</p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
-  <!--  CONTENT 3 - Durchführung  -->
-  <div class="wrapper">
-    <div class="content3">
-      <h3>Durchführung</h3>
-      <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
-        wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
-        in Kontakt.</p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <!--  CONTENT 3 - Durchführung  -->
+    <div class="wrapper">
+        <div class="content3">
+            <h3>Durchführung</h3>
+            <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
+                wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
+                in Kontakt.</p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
 </div>
 
 <!--  CONTENT  - Das Spiel  -->
 <div class="container spiel">
-  <div class="title">
-    <div class="container">
-      <h2 id="spiel">Dem Wasser auf der Spur</h2>
-      <h1>Das Spiel</h1>
+    <div class="title">
+        <div class="container">
+            <h2 id="spiel">Dem Wasser auf der Spur</h2>
+            <h1>Das Spiel</h1>
+        </div>
     </div>
-  </div>
 
-  <div class="wrapper">
-    <div class="content1">
-      <h3>Spielen</h3>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-        clita kasd gubergren, no sea. </p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <div class="wrapper">
+        <div class="content1">
+            <h3>Spielen</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea. </p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
-  <div class="wrapper">
-    <div class="content2">
-      <h3>Story</h3>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-        clita kasd gubergren, no sea. </p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <div class="wrapper">
+        <div class="content2">
+            <h3>Story</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea. </p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
-  <div class="wrapper">
-    <div class="content3">
-      <h3>Spielstruktur</h3>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-        clita kasd gubergren, no sea. </p>
-      <button type="button" class="more-btn">Mehr...</button>
+    <div class="wrapper">
+        <div class="content3">
+            <h3>Spielstruktur</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+                et
+                dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                Stet
+                clita kasd gubergren, no sea. </p>
+            <button type="button" class="more-btn">Mehr...</button>
+        </div>
     </div>
-  </div>
 </div>
 
 <!--                 #### TITLE 3 - das Team ####          -->
+<!--      Initialize image Carousel     -->
+<script>
+    var otslider = new OTSlider();
+    otslider.init({
+        // or 'fade'
+        transition: 'slide',
+        // easing function
+        transitionTiming: "ease",
+        // duration in ms
+        transitionDuration: 500
+    });
+</script>
 <div class="container team">
-  <div class="title">
-    <div class="container">
-      <h2 id="team">Schule und Gamedesign</h2>
-      <h1>Das Team</h1>
+    <div class="title">
+        <div class="container">
+            <h2 id="team">Schule und Gamedesign</h2>
+            <h1>Das Team</h1>
+        </div>
+        <div class="ot-slider">
+            <img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
+            <img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
+            <img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
+            <img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
+        </div>
     </div>
-  </div>
 
-  <div class="content-no-button">
-    <div class="container">
-      <h3>Team</h3>
-      <ul>
-        <li><a href="#">Alain Zanchetta</a></li>
-        <li><a href="#">Madlaina Kalunder</a></li>
-        <li><a href="#">Alexandre Thomas</a></li>
-        <li><a href="#">Matthias von Arx</a></li>
-        <li><a href="#">Angela Thomasius</a></li>
-        <li><a href="#">Rita Hochstrat</a></li>
-        <li><a href="#">Karin Güdel</a></li>
-        <li><a href="#">Swaantje Brinkmann</a></li>
-      </ul>
+    <div class="content-no-button">
+        <div class="container">
+            <h3>Team</h3>
+            <ul>
+                <li><a href="#">Alain Zanchetta</a></li>
+                <li><a href="#">Madlaina Kalunder</a></li>
+                <li><a href="#">Alexandre Thomas</a></li>
+                <li><a href="#">Matthias von Arx</a></li>
+                <li><a href="#">Angela Thomasius</a></li>
+                <li><a href="#">Rita Hochstrat</a></li>
+                <li><a href="#">Karin Güdel</a></li>
+                <li><a href="#">Swaantje Brinkmann</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </div>
 
 <!--                 #### TITLE 4 - Kontakt todo          -->
 <div class="container kontakt">
-  <div class="title">
-    <div class="container">
-      <h2 id="kontakt">FHNW & Education21</h2>
-      <h1>Kontakt</h1>
+    <div class="title">
+        <div class="container">
+            <h2 id="kontakt">FHNW & Education21</h2>
+            <h1>Kontakt</h1>
+        </div>
     </div>
-  </div>
 
-  <div class="content-no-button">
-    <p>Projektteam FHNW
-      Madlaina Kalunder & Karin Güdel
+    <div class="content-no-button">
+        <p>Projektteam FHNW
+            Madlaina Kalunder & Karin Güdel
 
-      éducation21
-      Angela Thomasius
+            éducation21
+            Angela Thomasius
 
-      PgB Netzwerkwerk MINT-Bildung
-      Sara Venzin</p>
-  </div>
+            PgB Netzwerkwerk MINT-Bildung
+            Sara Venzin</p>
+    </div>
 </div>
 
 <!--start Footer-->
 <footer>
-  <div class="container footer">
-    <h3>Contact</h3>
-    <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a href="mailto:no@spam.haha">company@haha.com</a>
-    </p>
+    <div class="container footer">
+        <h3>Contact</h3>
+        <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a
+                href="mailto:no@spam.haha">company@haha.com</a>
+        </p>
 
-    <h4>join the network</h4>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-      et
-      dolore magna aliquyam erat, sed diam voluptua.</p>
-    <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
-        class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
-        class="fab fa-instagram-square fa-3x"></i></a>
-    </p>
-  </div>
+        <h4>join the network</h4>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et
+            dolore magna aliquyam erat, sed diam voluptua.</p>
+        <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
+                class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
+                class="fab fa-instagram-square fa-3x"></i></a>
+        </p>
+    </div>
 </footer>
 <!--end Footer-->
 </body>
