zielgruppe als newpage template erstellt buttons sind verlinkt

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <p>Das Spiel ist für Oberstufenschulklassen konzipiert und zwar für alle Niveaus.
         Die Lehrperson muss mit dem Thema nicht vertraut sein. In den Fächern “Natur
         und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge.</p>
-      <button type="button" class="more-btn">Mehr...</button>
+      <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
     </div>
   </div>
   <!--  CONTENT 2- Ziele   -->
