fixed footer so wie im Figma

--- a/index.html
+++ b/index.html
@@ -168,38 +168,34 @@
 <div class="container kontakt">
   <div class="title">
     <div class="container">
-      <h2 id="kontakt">FHNW & Education21</h2>
+      <h2 id="kontakt">FHNW & Éducation21</h2>
       <h1>Kontakt</h1>
+      <br />
+      <br />
     </div>
   </div>
 
   <div class="content-no-button">
-    <p>Projektteam FHNW
-      Madlaina Kalunder & Karin Güdel
-
-      éducation21
-      Angela Thomasius
-
-      PgB Netzwerkwerk MINT-Bildung
-      Sara Venzin</p>
+    <div class="container">
+      <h2>Projektteam FHNW</h2>
+      <p>Madlaina Kalunder & Karin Güdel</p>
+      <br />
+      <br />
+      <h2>éducation21</h2>
+      <p>Angela Thomasius</p>
+      <br />
+      <br />
+      <h2>PgB Netzwerkwerk MINT-Bildung</h2>
+      <p>Sara Venzin</p>
+    </div>
   </div>
 </div>
 
 <!--start Footer-->
 <footer>
   <div class="container footer">
-    <h3>Contact</h3>
-    <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a href="mailto:no@spam.haha">company@haha.com</a>
-    </p>
-
-    <h4>join the network</h4>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-      et
-      dolore magna aliquyam erat, sed diam voluptua.</p>
-    <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
-        class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
-        class="fab fa-instagram-square fa-3x"></i></a>
-    </p>
+    <p>PH FHNW<br> Hofackerstrasse 30<br> 4032 Muttenz<br>
+      <a href="mailto:info@systemint.ch">info@systemint.ch</a><br> IMPRESSUM</p>
   </div>
 </footer>
 <!--end Footer-->
