Change styling of header in intro

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="title">
   <div class="container">
     <h2 id="homelink">Wasserwelten</h2>
-    <h1>Systemint Game</h1>
+    <h1><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big">game</span></h1>
     <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
       täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
       Jugendliche den gefährlichen Stoffen auf die Spur...</p>
