--- a/index.html
+++ b/index.html
@@ -151,15 +151,35 @@
 		</script>
 
 		<div class="team container">
-						<h2 id="team">Schule und Gamedesign</h2>
-					<h1>Das Team</h1>
-				<div class="ot-slider">
-					<img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
-					<img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
-					<img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
-					<img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
-				</div>
+						<h2 id="team">Das Team</h2>
+					<h1>Interdisziplinäres Team</h1>
+			<p>Wir entwickeln in einem interdisziplinären Team und reiben uns aneinander und wachsen miteinander.
+				Die Meinung der Lehrperson für Natur und Technik ist dabei genauso ernst zu nehmen, wie die technischen
+				Rahmenbedingungen, die der Softwareentwickler uns aufträgt. Ebenso ist die fachliche Kontrolle der
+				Umweltingenieurin unabdingbar, damit wir spielerisch fachlich korrekt bleiben.</p>
+			<h3>Projektleitung</h3>
+			<p>Geleitet wird das Projekt von Madlaina Kalunder, Game Designerin und Dozentin an der
+				Hochschule für Technik und Karin Güdel, Umweltingenieurin und Dozentin für Natur und Technik an der
+				Pädagogischen Hochschule.</p>
+			<h3>Unsere Kompetenzen</h3>
+			<p>Die sechs Bereiche, die für den Erfolg des Spiels wichtig sind, werden mit unserem
+			Team sehr gut abgedeckt: </p>
+			<ul>
+				<li> Schule, Unterricht...
+				<li> Game Design, Story-Telling...
+				<li> Didaktik, Pädagogik...
+				<li> Software Entwicklung, Webdesign...
+				<li> Wasserwelten, -systeme...
+				<li> Bildung für Nachhaltige Entwicklung...
+				<li> ...
+			</ul>
 
+			<div class="ot-slider">
+				<img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
+				<img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
+				<img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
+				<img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
+			</div>
 
 			<div class="content-no-button">
 				<div class="container">
@@ -189,15 +209,15 @@
 		<div id="kontakt" class="footer container">
 			<div class="prtcl-row">
 				<div class="col s12 m6 l4">
-					<h3>Projektteam FHNW</h3>
+					<p class="contact-title">Projektteam FHNW</p>
 					<p>Madlaina Kalunder & Karin Güdel<br>PH FHNW<br> Hofackerstrasse 30<br> 4032 Muttenz<br>  <a href="mailto:info@systemint.ch">info@systemint.ch</a></p>
 				</div>
 				<div class="col s12 m6 l4">
-					<h3>éducation21</h3>
+					<p class="contact-title">éducation21</h3>
 					<p>Angela Thomasius<br>éducation21<br> Hofackerstrasse 30<br> 4032 Muttenz<br>  <a href="mailto:info@systemint.ch">info@test.ch</a></p>
 				</div>
 				<div class="col s12 m6 l4">
-					<h3>PgB Netzwerkwerk MINT-Bildung</h3>
+					<p class="contact-title">PgB Netzwerkwerk MINT-Bildung</h3>
 					<p>Sara Venzin<br>PgB Netzwerkwerk MINT-Bildung<br> Hofackerstrasse 30<br> 4032 Muttenz<br>  <a href="mailto:info@systemint.ch">infotest@test.ch</a></p>
 				</div>
 			</div>
