--- a/zielgruppe.html
+++ b/zielgruppe.html
@@ -6,44 +6,26 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SysteMINT | Zielgruppe </title>
-  <link href="css/styleSM.css" type="text/css" rel="stylesheet" media="all"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="all"/>
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <!--BODY-->
-<body>
+<body class="background-detail">
 
     <!--logo + navbar-->
     <header>
       <div class="container">
-        <!--    hamburger-->
-        <div class="menubutton">
-          <span class="top"></span>
-          <span class="middle"></span>
-          <span class="bottom"></span>
-        </div>
-        <nav id="mainnav">
-            <ul>
-              <li><h1><a href="index.html"><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big"> game</span></a></h1></li>
-              <!--leerraum-->
-              <li><p></p></li>
-              <li><p></p></li>
-              <li><p></p></li>
-              <li><a id="home" href="index.html#homelink">Home</a></li>
-              <li><a href="index.html#spiel">Spiel</a></li>
-              <li><a href="index.html#schule">Schule</a></li>
-              <li><a href="index.html#team">Team</a></li>
-              <li><a id="contact" href="index.html#kontakt">Kontakt</a></li>
-            </ul>
-          </div>
-        </nav>
+        <a href="#homelink" class="selected">
+          <span class="big">Syste</span>
+          <span class="big salmon">mint</span><span class="big"> game</span></a>
       </div>
     </header>
 
-  <div class="container">
+  <div class="container zielgruppe">
     <div class="wrapper">
       <div class="content1">
-        <h1>ZIELGRUPPE</h3>
+        <h1>ZIELGRUPPE</h1>
         <p>Das Spiel ist für Oberstufen-schulklassen konzipiert und zwar für alle Niveaus. Die Lehrperson muss mit dem Thema nicht vertraut sein. 
           In den Fächern “Natur und Technik” und “Räume, Zeiten, Gesellschaften” gibt es Lehrplanbezüge. </p>
 
@@ -57,24 +39,5 @@
       </div>
     </div>
   </div>
-
-<!--start Footer-->
-<footer>
-    <div class="container footer">
-      <h3>Contact</h3>
-      <p>Company Name<br> Street 99<br> MM-9999 Moon<br> Fon +99 88 767 55 44<br> E-Mail <a href="mailto:no@spam.haha">company@haha.com</a>
-      </p>
-  
-      <h4>join the network</h4>
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-        et
-        dolore magna aliquyam erat, sed diam voluptua.</p>
-      <p><a href="#" class="social"><i class="fab fa-facebook-square fa-3x"></i></a> <a href="#" class="social"><i
-          class="fab fa-youtube-square fa-3x"></i></a> <a href="#" class="social"><i
-          class="fab fa-instagram-square fa-3x"></i></a>
-      </p>
-    </div>
-  </footer>
-  <!--end Footer-->
 </body>
 </html>
