--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2 id="homelink">Wasserwelten</h2>
     <h1><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big">game</span></h1>
     <p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
-      täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
+      täglich nutzen, sind in einem System miteinander verbunden. Mit Rätseln, Tüfteln und Experimentieren kommen
       Jugendliche den gefährlichen Stoffen auf die Spur...</p>
     <div>
       <img class="imageOne" src="images/background5.png" alt="water-in-pipes">
