--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		<!--            INTRO & TITLE       -->
 			<div class="title container">
 				<h2 id="homelink">Wasserwelten</h2>
-				<h1><span class="big">Syste</span><span class="bigSalmon">mint</span><span class="big">game</span></h1>
+				<h1><span>Syste</span><span class="salmon">mint</span><span>game</span></h1>
 				<p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
 					täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
-					Jugendliche den gefährlichen Stoffen auf die Spur...</p>
+					Jugendliche den gefährlichen Stoffen auf die Spur...</p><br>
 				<button type="button" class="play-btn" onclick="location.href='#spiel'">Spielen</button>
 				<button type="button" class="contact-btn" onclick="location.href='#kontakt'">Melde Dich</button>
 <!--				<div>-->
