small changes in gridSM, index and style.css

--- a/index.html
+++ b/index.html
@@ -187,19 +187,7 @@
     </div>
 
     <div class="content-no-button">
-        <div class="container">
-            <h3>Team</h3>
-            <ul>
-                <li><a href="#">Alain Zanchetta</a></li>
-                <li><a href="#">Madlaina Kalunder</a></li>
-                <li><a href="#">Alexandre Thomas</a></li>
-                <li><a href="#">Matthias von Arx</a></li>
-                <li><a href="#">Angela Thomasius</a></li>
-                <li><a href="#">Rita Hochstrat</a></li>
-                <li><a href="#">Karin Güdel</a></li>
-                <li><a href="#">Swaantje Brinkmann</a></li>
-            </ul>
-        </div>
+
         <!--				<div>-->
         <!--					<img class="imageFour" src="images/background5.png" alt="water-in-pipes">-->
         <!--				</div>-->
@@ -217,12 +205,12 @@
                         href="mailto:info@systemint.ch">info@systemint.ch</a></p>
             </div>
             <div class="col s12 m6 l4">
-                <p class="contact-title">éducation21</h3>
+                <p class="contact-title">éducation21</p>
                 <p>Angela Thomasius<br>éducation21<br> Hofackerstrasse 30<br> 4032 Muttenz<br> <a
                         href="mailto:info@systemint.ch">info@test.ch</a></p>
             </div>
             <div class="col s12 m6 l4">
-                <p class="contact-title">PgB Netzwerkwerk MINT-Bildung</h3>
+                <p class="contact-title">PgB Netzwerkwerk MINT-Bildung</p>
                 <p>Sara Venzin<br>PgB Netzwerkwerk MINT-Bildung<br> Hofackerstrasse 30<br> 4032 Muttenz<br> <a
                         href="mailto:info@systemint.ch">infotest@test.ch</a></p>
             </div>
@@ -273,7 +261,6 @@
                 stroke-width="4" fill="none"/>
     </svg>
 </div>
->>>>>>> develop
 
 </body>
 </html>
