Change font-size for intro text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="title container">
 				<h2 id="homelink">Wasserwelten</h2>
 				<h1><span>Syste</span><span class="salmon">mint</span><span>game</span></h1>
-				<p>In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
+				<p class="introtext">In diesem Spiel verwischen die Grenzen zwischen Ober- und Unterwasserwelt. Das Wasser und die Stoffe, die wir
 					täglich nutzen, sind in einem System miteinander verbunden. Mit rätseln, tüfteln und experimentieren kommen
 					Jugendliche den gefährlichen Stoffen auf die Spur...</p><br>
 				<button type="button" class="play-btn" onclick="location.href='#spiel'">Spielen</button>
