--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         Jugendliche den gefährlichen Stoffen auf die Spur...</p><br>
     <button type="button" class="play-btn" onclick="location.href='#spiel'">Spielen</button>
     <button type="button" class="contact-btn" onclick="location.href='#kontakt'">Melde Dich</button>
-    <!--				<div>-->
-    <!--					<img class="imageOne" src="images/background5.png" alt="water-in-pipes">-->
-    <!--				</div>-->
+</div>
+<div>
+    <img class="imageOne" src="images/background5.png" alt="water-in-pipes">
 </div>
 
 
@@ -58,9 +58,6 @@
 <div class="lehrpersonen container">
     <h2 id="schule">Für Wen, Was, Wie?</h2>
     <h1>Lehrpersonen</h1>
-    <!--			<div>-->
-    <!--				<img class="imageTwo" src="images/background5.png" alt="water-in-pipes">-->
-    <!--			</div>-->
     <!--  CONTENT 1 - Zielgruppe  -->
     <div class="wrapper">
         <div class="content1">
@@ -92,10 +89,13 @@
             <button type="button" class="more-btn">Mehr...</button>
         </div>
     </div>
-    <!--			<div>-->
-    <!--				<img class="imageTwo" src="images/background6.png" alt="water-in-pipes">-->
-    <!--			</div>-->
 </div>
+<div>
+    <img class="imageTwo" src="images/background3.png" alt="water-in-pipes">
+</div>
+					<div>
+						<img class="imageFour" src="images/background2.png" alt="water-in-pipes">
+					</div>
 
 <!--  CONTENT  - Das Spiel  -->
 <div class="spiel container">
@@ -115,9 +115,7 @@
     </div>
     <div class="wrapper">
         <div class="content2">
-            <!--					<div>-->
-            <!--						<img class="imageThree" src="images/background5.png" alt="water-in-pipes">-->
-            <!--					</div>-->
+
             <h3>Story</h3>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
                 et
@@ -138,9 +136,9 @@
             <button type="button" class="more-btn">Mehr...</button>
         </div>
     </div>
-    <!--			<div>-->
-    <!--				<img class="imageThree" src="images/background1.png" alt="water-in-pipes">-->
-    <!--			</div>-->
+</div>
+<div>
+    <img class="imageThree" src="images/background1.png" alt="water-in-pipes">
 </div>
 
 <!--                 #### TITLE 3 - das Team ####          -->
@@ -187,12 +185,11 @@
         <img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
         <img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
     </div>
-
-    <!--				<div>-->
-    <!--					<img class="imageFour" src="images/background5.png" alt="water-in-pipes">-->
-    <!--				</div>-->
 </div>
 
+				<div>
+					<img class="imageFive" src="images/background3.png" alt="water-in-pipes">
+				</div>
 
 <!-- end content -->
 <footer>
