nur ein bisschen aufgeräumt

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 miteinander vernetzen, Perspektiven wechseln, argumentieren, entscheiden und
                 Verantwortung für die Zukunft übernehmen. Neben den BNE-Zielen werden auch
                 fachliche Ziele der Fächer NT und RZG verfolgt.</p>
-            <button type="button" class="more-btn">Mehr...</button>
+            <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
         </div>
     </div>
     <!--  CONTENT 3 - Durchführung  -->
@@ -84,7 +84,7 @@
             <p>Die gesamte Spieldauer beträgt 8-12h, wobei 1-2h ausserhalb der Schule gespielt
                 wird. Die Schüler*innen arbeiten in Gruppen und sind über das Spiel miteinander
                 in Kontakt.</p>
-            <button type="button" class="more-btn">Mehr...</button>
+            <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
         </div>
     </div>
 </div>
@@ -108,7 +108,7 @@
                 dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
                 Stet
                 clita kasd gubergren, no sea. </p>
-            <button type="button" class="more-btn">Mehr...</button>
+            <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
         </div>
     </div>
     <div class="wrapper">
@@ -119,7 +119,7 @@
                 dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
                 Stet
                 clita kasd gubergren, no sea. </p>
-            <button type="button" class="more-btn">Mehr...</button>
+            <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
         </div>
     </div>
     <div class="wrapper">
@@ -130,7 +130,7 @@
                 dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
                 Stet
                 clita kasd gubergren, no sea. </p>
-            <button type="button" class="more-btn">Mehr...</button>
+            <button type="button" onclick="location.href='zielgruppe.html'" class="more-btn">Mehr...</button>
         </div>
     </div>
 </div>
