added new, darker platzhalter bilder and changed first silly sentence

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <div class="team container">
     <h2 id="team">Das Team</h2>
     <h1>Interdisziplinäres Team</h1>
-    <p>Wir entwickeln in einem interdisziplinären Team und reiben uns aneinander und wachsen miteinander.
+    <p>Wir entwickeln das Spiel in einem interdisziplinären Team und lernen dabei verschiedene Perspektiven kennen.
         Die Meinung der Lehrperson für Natur und Technik ist dabei genauso ernst zu nehmen, wie die technischen
         Rahmenbedingungen, die der Softwareentwickler uns aufträgt. Ebenso ist die fachliche Kontrolle der
         Umweltingenieurin unabdingbar, damit wir spielerisch fachlich korrekt bleiben.</p>
@@ -177,10 +177,10 @@
     </ul>
 
     <div class="ot-slider">
-        <img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
         <img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
         <img src="images/team/platzhalter2.jpeg" alt="platzhalter2"/>
-        <img src="images/team/platzhalter1.jpeg" alt="platzhalter1"/>
+        <img src="images/team/platzhalter3.jpeg" alt="platzhalter3"/>
+        <img src="images/team/platzhalter4.jpeg" alt="platzhalter4"/>
     </div>
 </div>
 				<div>
