--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
 				<div>
 					<img class="imageFive" src="images/background3.png" alt="water-in-pipes">
 				</div>
+        <div>
+            <img class="imageFive" src="images/background3.png" alt="water-in-pipes">
+        </div>
 
 <!-- end content -->
 <footer>
